--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <header class="header">
       <nav class="header-navigation">
         <a href="./index.html" class="header-logo-link"
-          ><span class="logo">Web</span>Studio</a
-        >
+          >Web<span class="logo">Studio</span>
+        </a>
         <ul class="header-navigation-list">
           <li class="header-navigation-item">
-            <a href="" class="header-navigation-link">Studio</a>
+            <a href="./index.html" class="header-studio-link">Studio</a>
           </li>
           <li class="header-navigation-item">
             <a href="" class="header-navigation-link">Portfolio</a>
@@ -60,7 +60,7 @@
       </section>
       <!-- section-2 -->
       <section class="features">
-        <h2 class="visualy-hidden">Features</h2>
+        <h2 class="visually-hidden">Features</h2>
         <ul class="features-list">
           <li class="features-list-item">
             <h3 class="features-title">Strategy</h3>
@@ -212,8 +212,8 @@
     </main>
     <footer class="footer">
       <a href="./index.html" class="footer-logo-link"
-        ><span class="logo">Web</span>Studio</a
-      >
+        >Web<span class="footer-logo">Studio</span>
+      </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
